Fix default table layout to prevent overflow off screen

--- a/styles/postgresql.less
+++ b/styles/postgresql.less
@@ -1,13 +1,17 @@
 table {
   width: 100%;
+  table-layout: fixed;
 }
 
 td {
   padding: 1px 3px;
+  word-break: break-all !important;
+  white-space: normal;
 }
 
 th {
   padding: 3px;
+  word-break: break-all !important;
 }
 
 .external-link-icon {
